  value
- "0" can now be used as a valid interval name
- Config error messages now wrap before 80 columns.
- Moved $file_line_num global var into parse_config_file()
- Split on \s+ instead of \s where appropriate
- Moved $rsync_include_args and $rsync_include_file_args into
  parse_config_file()
- Removed the $have_{cmd} global variables entirely

VERSION 1.1.5 (Jun 20 20:56 2004)
------------------------------------------------------------------------------
- /bin/rm is the default for deleting directories (in the default config file)
- Removed redundant validation (re: intervals) in execution section
- Print PID in lockfile
- Added a few more comments, clarified some existing comments
- Made some minor updates to the man page
- Fix display formatting double-slash bug when '/' is a backup point
- Changed return value when called with no cmd line args to 1
- Added a new exit code, for warnings (2)
- rsync exit codes 23 and 24 make rsnapshot return a warning exit code
  instead of an error
- Changed link_dest comment in config file to mention "cross-platform"
- Added utils/debug_moving_files.sh abuse script for testing
- Added 'du' option to show disk usage in snapshot_root
- Moved setlocale() after begin message
- Added manual link() call when we're using --link-dest and a single file
- Don't call syslog in bail() if it's a test run

VERSION 1.1.4 (May 16 23:44 2004)
------------------------------------------------------------------------------
- (re)added the cmd_rm parameter. rmtree() can't delete some obscure files
  on some systems
- Added rm_rf() stub function to recursively remove things using either
  rmtree() or /bin/rm -rf, depending on the configuration.
- Added cp and rm detection to ./configure script
- Set LC_ALL locale variable to C in an attempt to fix rmtree() locale issue
- Added no_create_root option to rsnapshot
- Added utils/make_cvs_snapshot.sh utility script
- Added utils/sign_packages.sh utility script